update, class name, xml variables and dimension resource

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -10,19 +10,23 @@
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
         <activity android:name=".Login"></activity>
-        <activity android:name=".NewAccount"></activity>
+        <activity android:name=".NewAccount">
+
+        </activity>
         <activity android:name=".TokenValidation"></activity>
         <activity android:name=".PasswordLogin">
 
         </activity>
         <activity android:name=".SignUpContinue"></activity>
-        <activity android:name=".NewPassword"></activity>
-        <activity android:name=".ResetPasswordConfirm">
+        <activity android:name=".NewPassword">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
+        </activity>
+        <activity android:name=".ResetPasswordConfirm">
+
         </activity>
     </application>
 
