--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -5,45 +5,32 @@
     <application
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
-        android:label="@string/app_name"
+        android:label=""
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".Login"
-            android:windowSoftInputMode="adjustResize">
-
-
-        </activity
-            >
-        <activity android:name=".NewAccount">
-
-            
-
-
-        </activity>
-        <activity android:name=".TokenValidation">
-
-        </activity>
-        <activity android:name=".PasswordLogin"
-            android:windowSoftInputMode="adjustResize">
-
-        </activity>
-        <activity android:name=".SignUpContinue">
-
-        </activity>
+        <activity
+            android:name=".Login"
+            android:windowSoftInputMode="adjustResize"></activity>
+        <activity android:name=".NewAccount"></activity>
+        <activity android:name=".TokenValidation"></activity>
+        <activity
+            android:name=".PasswordLogin"
+            android:windowSoftInputMode="adjustResize"></activity>
+        <activity android:name=".SignUpContinue"></activity>
         <activity android:name=".NewPassword">
+
+
+        </activity>
+        <activity
+            android:name=".ResetPasswordConfirm"
+            android:windowSoftInputMode="adjustResize"></activity>
+        <activity android:name=".Home">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
-
-
-        </activity>
-        <activity android:name=".ResetPasswordConfirm"
-            android:windowSoftInputMode="adjustResize">
-
-
         </activity>
     </application>
 
