--- a/app/build.gradle
+++ b/app/build.gradle
@@ -35,13 +35,10 @@ dependencies {
     androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.2'
     implementation 'com.squareup.okhttp3:logging-interceptor:3.9.1'
     implementation 'com.squareup.retrofit2:converter-gson:2.5.0'
-
+    implementation 'com.squareup.picasso:picasso:2.5.0'
 
 // Lifecycle components
     implementation 'android.arch.lifecycle:extensions:1.1.1'
 
 
 }
-
-
-
