--- a/app/build.gradle
+++ b/app/build.gradle
@@ -37,6 +37,8 @@ dependencies {
     implementation 'com.squareup.retrofit2:converter-gson:2.5.0'
     implementation 'com.squareup.picasso:picasso:2.5.0'
 
+    implementation 'de.hdodenhof:circleimageview:2.1.0'
+
 // Lifecycle components
     implementation 'android.arch.lifecycle:extensions:1.1.1'
 
